Javascript started with character moves, objects
characters stored as individual objects
characters move change class appropriately
for luke selection

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,9 @@ h3 {
     margin-left: 10px;
     float: left;
 }
-
+.selected {
+    background-color: red;
+}
 .char-text {
     font-size: 13px;
     text-align: center;
